update link for membership

--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -57,7 +57,7 @@
                     of
                     SF Bay Area SHPE.</p>
                 <p class="text-center">
-                    <button class="btn btn-primary">Learn More</button>
+                    <a class="btn btn-primary" href="{% url "membership" %}">Learn More</a>
                 </p>
             </div>
         </div>
