update links in base

--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -58,6 +58,11 @@
                 <p><a href="https://www.shpeconnect.org" target="_blank">SHPE Connect</a></p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12" id="credit">
+                Site design by <a target="_blank" href="http://the.r3dm.com"> The R3DM ©</a>
+            </div>
+        </div>
     </div>
 </footer>
 
