updates jobs, contact, and urls

--- a/shpesfba/templates/shpesfba/about.html
+++ b/shpesfba/templates/shpesfba/about.html
@@ -14,6 +14,10 @@
                    href="{% url "about.executive-board" %}">
                     Executive Board
                 </a>
+                <a class="list-group-item {% nav_active "about.past-events" "active" %}"
+                   href="{% url "about.past-events" %}">
+                    Past Events
+                </a>
                 <a class="list-group-item {% nav_active "about.chapter" "active" %}" href="{% url "about.chapter" %}">Chapter
                     History</a>
                 <a class="list-group-item {% nav_active "about.bylaws" "active" %}" href="{% url "about.bylaws" %}">Our
