--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -44,7 +44,7 @@
                     <p class="text-center"><em>No upcoming events</em></p>
                 {% endif %}
                 <p class="text-center">
-                    <button class="btn btn-default">View Past Events</button>
+                <a href="{% url 'about.past-events' %}" class="btn btn-default">View Past Events</a>
                 </p>
             </div>
             <div class="col-md-6">
