--- a/shpesfba/templates/shpesfba/jobs.html
+++ b/shpesfba/templates/shpesfba/jobs.html
@@ -6,6 +6,14 @@
         </div>
     </div>
 
+   {% if messages %}
+       {% for message in messages %}
+       <div class="alert {% if message.tags %}{{ message.tags }}{% endif %}">
+          {{ message }}
+       </div>
+       {% endfor %}
+   {% endif %}
+
     <div class="container">
         <div class="col-md-3">
             <h2>Jobs</h2>
