--- a/shpesfba/templates/shpesfba/jobs.job_listings.html
+++ b/shpesfba/templates/shpesfba/jobs.job_listings.html
@@ -19,7 +19,7 @@
                             {{ job.location }}
                         </strong><br/>
                         <span class="glyphicon glyphicon-envelope"></span>
-                        <a href="">
+                        <a href="mailto:{{ job.contact_email }}">
                             {{ job.contact_email }}
                         </a>
                     </p>
