--- a/shpesfba/templates/shpesfba/contact.html
+++ b/shpesfba/templates/shpesfba/contact.html
@@ -9,13 +9,18 @@
         </div>
     </div>
 
+   {% if messages %}
+       {% for message in messages %}
+       <div class="alert {% if message.tags %}{{ message.tags }}{% endif %}">
+          {{ message }}
+       </div>
+       {% endfor %}
+   {% endif %}
+
     <div class="container">
         <div class="col-md-12">
             <h1>Contact Us</h1>
             {% if success %}
-                <div class="alert alert-success">
-                    <strong>Message sent.</strong> Thank you for your message. We will respond as soon as possible.
-                </div>
             {% endif %}
             <p>Have any questions or comments? Take a look at FAQs at the bottom of the page or use the form below to
                 let us know.</p>
@@ -82,9 +87,7 @@
                                 </div>
                             {% endfor %}
                             <label for="message">Question/Comment</label>
-                            <textarea id="message" name="message" class="form-control" rows="8">
-                                {{ form.message.value|default_if_none:"" }}
-                            </textarea>
+                            <textarea id="message" name="message" class="form-control" rows="8">{{ form.message.value|default_if_none:"" }}</textarea>
                         </div>
                         <div class="form-group">
                             <input type="submit" class="btn btn-primary"/>
