update front page

--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -57,7 +57,9 @@
                     of
                     SF Bay Area SHPE.</p>
                 <p class="text-center">
-                    <a class="btn btn-primary" href="{% url "membership" %}">Learn More</a>
+                    <a class="btn btn-default" href="https://www.facebook.com/groups/120819351271743/" target="_blank">Join Our Facebook Group</a>
+                    <a class="btn btn-default" href="{% url "membership" %}">Apply Online</a>
+                    <a class="btn btn-default" href="{% url "contact" %}?action=mailing_list">Join Our Mailing List</a>
                 </p>
             </div>
         </div>
