--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -28,6 +28,7 @@
         <div id="navbar-collapsable" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
             <ul class="navbar-nav nav">
                 <li class="{% nav_active 'index' 'active' %}"><a href="/">Home</a></li>
+                <li class="{% nav_active 'latino-engineering-day' 'active' %}"><a href="{% url "latino-engineering-day" %}">Latino Engineering Day</a></li>
                 <li class="{% nav_active 'membership' 'active' %}"><a href="{% url "membership" %}">Membership</a></li>
                 <li class="{% nav_active 'jobs' 'active' %}"><a href="{% url "jobs" %}">Job Listings</a></li>
                 <li class=""><a href="https://get.google.com/u/0/albumarchive/102966762992057412391" target="_blank">Photos</a></li>
