--- a/shpesfba/templates/shpesfba/home.html
+++ b/shpesfba/templates/shpesfba/home.html
@@ -34,10 +34,10 @@
                 <h1 class="text-center">Upcoming Events</h1>
                 {% if events %}
                     {% for event in events %}
-                        <h4><a href="https://facebook.com/event/{{ event.fb_id }}" target="_blank">{{ event.title }}
+                        <h4><a href="https://facebook.com/events/{{ event.fb_id }}" target="_blank">{{ event.title }}
                             <small>{{ event.date | date:'N j, g:i A' }} at {{ event.location }}</small>
                         </a></h4>
-                        <p>{{ event.description }}</p>
+                        <p>{{ event.description | safe | linebreaksbr}}</p>
                         <hr/>
                     {% endfor %}
                 {% else %}
