--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -31,7 +31,7 @@
                 <li class="{% nav_active 'latino-engineering-day' 'active' %}"><a href="{% url "latino-engineering-day" %}">Latino Engineering Day</a></li>
                 <li class="{% nav_active 'membership' 'active' %}"><a href="{% url "membership" %}">Membership</a></li>
                 <li class="{% nav_active 'jobs' 'active' %}"><a href="{% url "jobs" %}">Job Listings</a></li>
-                <li class=""><a href="https://get.google.com/u/0/albumarchive/102966762992057412391" target="_blank">Photos</a></li>
+                <li class="{% nav_active 'gallery' 'active' %}"><a href="{% url "gallery" %}">Gallery</a></li>
                 <li class="{% nav_active 'about' 'active' %}"><a href="{% url "about" %}">About</a></li>
                 <li class="{% nav_active 'contact' 'active' %}"><a href="{% url "contact" %}">Contact</a></li>
             </ul>
