--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>{% block title %}{% endblock %} - SHPE SF Bay Area</title>
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"/>
-    <link rel="stylesheet" href="{% static "css/shpe.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=2"/>
     {% block styles %}
     {% endblock %}
 </head>
@@ -28,8 +28,8 @@
         <div id="navbar-collapsable" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
             <ul class="navbar-nav nav">
                 <li class="{% nav_active 'index' 'active' %}"><a href="/">Home</a></li>
-                <li class="{% nav_active 'latino-engineering-day' 'active' %}"><a href="{% url "latino-engineering-day" %}">Latino Engineering Day</a></li>
                 <li class="{% nav_active 'membership' 'active' %}"><a href="{% url "membership" %}">Membership</a></li>
+                <li class="{% nav_active 'calendar' 'active' %}"><a href="{% url "calendar" %}">Calendar</a></li>
                 <li class="{% nav_active 'jobs' 'active' %}"><a href="{% url "jobs" %}">Job Listings</a></li>
                 <li class="{% nav_active 'gallery' 'active' %}"><a href="{% url "gallery" %}">Gallery</a></li>
                 <li class="{% nav_active 'about' 'active' %}"><a href="{% url "about" %}">About</a></li>
@@ -55,7 +55,6 @@
             <div class="col-md-6">
                 <h4>SHPE Resources</h4>
                 <p><a href="http://www.shpe.org/" target="_blank">SHPE Inc.</a></p>
-                <p><a href="http://www.shpefoundation.org/" target="_blank">SHPE Foundation</a></p>
                 <p><a href="https://www.shpeconnect.org" target="_blank">SHPE Connect</a></p>
             </div>
         </div>
