--- a/shpesfba/templates/shpesfba/about.awards.html
+++ b/shpesfba/templates/shpesfba/about.awards.html
@@ -5,6 +5,11 @@
 {% block about_content %}
 <h1>Awards and Honors</h1>
 <ul>
+   <li>2016-2017
+      <ul>
+         <li>Blue Chip Award</li>
+      </ul>
+   </li>
    <li>2015-2016
       <ul>
          <li>Region 1 Chapter of the Year</li>
@@ -19,7 +24,7 @@
       </ul>
    </li>
    <li>2013-2014
-      <ul>-board
+      <ul>
          <li>National Large Chapter of the Year</li>
          <li>Region 1 Chapter of the Year</li>
          <li>Blue Chip award</li>
