--- a/shpesfba/templates/shpesfba/base.html
+++ b/shpesfba/templates/shpesfba/base.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock %} - SHPE SF Bay Area</title>
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"/>
     <link rel="stylesheet" href="{% static "css/shpe.css" %}?v=2"/>
+     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans"> 
     {% block styles %}
     {% endblock %}
 </head>
@@ -56,11 +57,6 @@
                 <h4>SHPE Resources</h4>
                 <p><a href="http://www.shpe.org/" target="_blank">SHPE Inc.</a></p>
                 <p><a href="https://www.shpeconnect.org" target="_blank">SHPE Connect</a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12" id="credit">
-                Site design by <a target="_blank" href="http://the.r3dm.com"> The R3DM ©</a>
             </div>
         </div>
     </div>
