--- a/static/css/shpe.css
+++ b/static/css/shpe.css
@@ -1,13 +1,23 @@
 html {
-  overflow-y: scroll;
+    overflow-y: scroll;
 }
+
+body {
+     font-family: 'Open Sans', sans-serif; 
+}
+
+h1, h2, h3, h4, h5, h6 {
+     font-weight: 700; 
+     color: #4B4B4C; 
+}
+
 #headline {
-    background-color: #33648c;
-    background-image: url('images/shape-01.png'), url('images/shape-02.png');
-    background-position: 25% 0, 85% 85%;
-    background-size: auto 120%;
+    background-color: rgba(12, 11, 11, 0.82);
+    background-image: url('images/home_group.jpg');
+    /* background-position: 25% 0, 85% 85%; */
+     background-size: auto 120%; 
     background-repeat: no-repeat;
-    height: 220px;
+    height: 420px;
 }
 
 #headline-min {
@@ -681,10 +691,6 @@ a.navigation {
     z-index: 100
 }
 
-#credit {
-    padding-top:40px;
-}
-
 .clearfix {
       clear:both;
 }
@@ -695,4 +701,82 @@ a.navigation {
   background-repeat: no-repeat;
       background-position: top center;
           background-size: cover;
+}
+
+.bottom-line{
+	width: 25px;
+	height: 3px;
+	background-color: #4B4B4C;
+}
+
+.fea{
+	margin-top: 25px;
+}
+.fea-img {
+  width: 20%;
+}
+.fea i {
+    font-size: 39px;
+    color: #1a3851;
+    margin-top: 7px;
+}
+
+/* Custom Buttons
+ ===========================================
+*/ 
+.btn-shpe {
+    border-radius: 0;
+    background: none;
+    border: 2px solid #1a3851;
+    color: #337ab7; 
+    margin-top: 2px;
+}
+
+.btn-shpe:hover {
+    border-radius: 0;
+    background: #337ab7;
+    border: 2px solid #337ab7;
+    color: #fff;
+}
+
+/* Homepage Blue Chip Award Text
+ ===========================================
+*/ 
+.blue-chip {
+  color: #4B4B4C;
+  font-weight: 600;
+  font-size: 12pt;
+  padding: 25px;
+  text-align: center;
+}
+
+.line {
+  padding-top: 20px;
+  overflow: hidden;
+  text-align: center;
+}
+
+.line hr {
+    border-top: 2px solid #4B4B4C;
+}
+
+/* Homepage Group Image and Leading Text
+ ===========================================
+*/ 
+.banner {
+	background: url('images/home_group.jpg') no-repeat center top;
+    background-size: cover;
+	min-height: 480px;
+    position: relative;
+}
+
+.banner-text {
+    text-align: center;
+    color: #fff;
+    margin-top: 30%;
+}
+
+.bg-color {
+	background-color: rgba(12, 11, 11, 0.4);
+	min-height: 480px;
 }
